--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Dr Daniel W Davies"
   avatar           : "profile.png"
-  bio              : "Computational Chemistry Research Fellow at UCL"
+  bio              : "Senior Research Software Engineer at Imperial College London"
   location         : "London, UK"
   employer         :
   pubmed           : 
